@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2021/10/26 10:59:06 nia Exp $
-
-BLAKE2s (ini-files-03.zip) = 2e71202f5b0345f533aefbfbb431b3aa634486d0918b831544ef9d0a9ece0806
-SHA512 (ini-files-03.zip) = 28db4b99125d4c74f09e89ecaa612e26472308af0b2f648fa146d8c51342ca7fbbe6fd6bc5aad006d45ef579c52a0fb176d90973dfa644a67d406a31189dcf2b
-Size (ini-files-03.zip) = 7643 bytes
