@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.6311 2022/12/21 14:21:18 pin Exp $
+$NetBSD: CHANGES-2022,v 1.6312 2022/12/21 14:45:21 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -9435,3 +9435,4 @@ Changes to the packages collection and infrastructure in 2022:
 	Removed lang/gnat_util [wiz 2022-12-21]
 	Updated devel/difftastic to 0.39.0nb1 [pin 2022-12-21]
 	Updated graphics/oculante to 0.6.34 [pin 2022-12-21]
+	Removed misc/ini_file_manager [wiz 2022-12-21]
